--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "npm run server:dev",
+    "test": "vitest",
     "prod": "npm run lint && npm run build && npm run server:prod",
     "build": "vite build",
     "server:dev": "node ./server",
@@ -18,6 +19,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "express": "^4.18.2",
+    "jsdom": "^24.1.1",
     "node-fetch": "^3.3.2",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
@@ -28,6 +30,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.9",
